<resources>
    <string name="app_name">NotesMaker</string>
    <string name="title">Notes Application</string>
    <string name="subtitle">Life is too fast don\'t forget anything just note it !!</string>
    <string name="developed">By Raghav Arya\n Yor Developer is here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title1">Title</string>
    <string name="subtitle1">subtitle</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="delete">Delete</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_you_want_to_delete_n_this_note">Are you sure, you want to delete\n This Note?</string>
    <string name="search">Search</string>
</resources>